--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -3,7 +3,7 @@
 $first-Color: #1F3F68;
 $second-Color: #356EAD;
 $thir-Color: #1c1c1c;
-$fourth-Color: #316099;
+$fourth-Color: #7cabe4;
 $fifth-Color: #ffffff;
 
 // TAMANIOS DE CUENTE
@@ -13,4 +13,17 @@ $xl : 20px;
 $l : 16px;
 $m : 12px;
 $s : 10px;
+
+
+.fw-l{
+    font-weight: 200;
+}
+
+.fw-r{
+    font-weight: 500;
+}
+
+.fw-b{
+    font-weight: 800;
+}
 
