--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,9 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 @import './modules/Header/Header';
+@import './modules/Banner/Banner'
 
 
 
