--- a/styles.scss
+++ b/styles.scss
@@ -6,7 +6,8 @@ body{
 }
 
 @import './modules/Header/Header';
-@import './modules/Banner/Banner'
+@import './modules/Banner/Banner';
+@import './modules/Search/Search'
 
 
 
