--- a/styles.css
+++ b/styles.css
@@ -353,6 +353,14 @@ template {
   font-weight: 800;
 }
 
+.name-color {
+  color: #356EAD;
+}
+
+.p-color {
+  color: #9d9d9d;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -403,8 +411,8 @@ body {
 
 .Banner {
   width: 100%;
-  height: 150px;
-  background: #7cabe4;
+  height: 250px;
+  background: #356EAD;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -421,19 +429,19 @@ body {
 }
 
 .Banner-Title {
-  font-size: 24px;
+  font-size: 34px;
   color: #ffffff;
 }
 
 .Banner-Text {
-  font-size: 12px;
+  font-size: 16px;
   color: #ffffff;
   width: 400px;
   text-align: center;
 }
 
 .Search-Container {
-  padding: 20px;
+  padding: 0 10px;
 }
 
 .Search-Input {
@@ -441,5 +449,124 @@ body {
   background: #eeeeee;
   border-radius: 2px;
   font-size: 10px;
+}
+
+.Main-Title-Text {
+  font-size: 16px;
+}
+
+.Main-Art1 {
+  height: 400px;
+}
+
+.Main-Art1-Info {
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Main-Art1-Title {
+  font-size: 24px;
+}
+
+.Main-Art1-Social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Main-Art1-Personal-Name {
+  font-size: 16px;
+}
+
+.Main-Art1-Personal-Date {
+  font-size: 12px;
+}
+
+.Main-Art1-Icons img {
+  width: 20px;
+}
+
+.Main-Art1 img {
+  height: 100%;
+}
+
+.Main-Art2-Card {
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.Main-Art2-Card-Info {
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Main-Art2-Card-Title {
+  font-size: 16px;
+}
+
+.Main-Art2-Card-Text {
+  font-size: 12px;
+}
+
+.Main-Art2-Card-Social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Main-Art2-Card-Personal-Name {
+  font-size: 16px;
+}
+
+.Main-Art2-Card-Personal-Date {
+  font-size: 12px;
+}
+
+.Main-Art2-Card-Icons img {
+  width: 20px;
+}
+
+.Main-Art2-Card img {
+  height: 100%;
+}
+
+.Main-Art2-Card-Img {
+  width: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
