--- a/styles.scss
+++ b/styles.scss
@@ -7,7 +7,8 @@ body{
 
 @import './modules/Header/Header';
 @import './modules/Banner/Banner';
-@import './modules/Search/Search'
+@import './modules/Search/Search';
+@import './modules/Main/Main';
 
 
 
