--- a/styles.scss
+++ b/styles.scss
@@ -9,6 +9,7 @@ body{
 @import './modules/Banner/Banner';
 @import './modules/Search/Search';
 @import './modules/Main/Main';
+@import './modules/Articles/Articles';
 
 
 
