--- a/modules/Main/_Main.scss
+++ b/modules/Main/_Main.scss
@@ -125,6 +125,7 @@
 
     &-Text{
         font-size: $m;
+        color: $first-Color;
         
     }
 }
@@ -133,5 +134,6 @@
 
     &-Text{
         font-size: $m;
+        color: $first-Color;
     }
 }
