--- a/styles.css
+++ b/styles.css
@@ -353,6 +353,10 @@ template {
   font-weight: 800;
 }
 
+.title-color {
+  color: #1F3F68;
+}
+
 .name-color {
   color: #356EAD;
 }
@@ -576,9 +580,62 @@ body {
 
 .Popular-Text {
   font-size: 12px;
+  color: #1F3F68;
 }
 
 .All-Text {
   font-size: 12px;
+  color: #1F3F68;
+}
+
+.Article-Card {
+  height: 250px;
+}
+
+.Article-Card-Img {
+  height: 100%;
+}
+
+.Article-Info {
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.Article-Info-Title {
+  margin-top: 0;
+}
+
+.Article-Info-Social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 0;
+}
+
+.Article-Info-Social-Personal-Name {
+  font-size: 16px;
+}
+
+.Article-Info-Social-Personal-Date {
+  font-size: 12px;
+}
+
+.Article-Info-Social-Icons img {
+  width: 20px;
 }
 /*# sourceMappingURL=styles.css.map */
