--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@ body{
 @import './modules/Search/Search';
 @import './modules/Main/Main';
 @import './modules/Articles/Articles';
+@import './modules/Footer/Footer';
 
 
 
