avance final arreglos mobile

--- a/modules/Main/_Main.scss
+++ b/modules/Main/_Main.scss
@@ -13,7 +13,7 @@
     
 
     &-Info{
-        height: 400px;
+        height: 200px;
         display: flex;
         flex-direction: column;
         
@@ -65,6 +65,7 @@
     // background: chocolate;
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
     
 
     &-Info{
